finding and solving bugs
